fix slidecontrols width on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -134,7 +134,7 @@ $break-large: 960px;
     }
     .slider-controls {
         // background-color: red;
-        width: 334px;
+        width: 272px;
         height: 13px;
         position: absolute;
         z-index: 1;
